syntax = "proto3";

package foo.v1;

// FIXME 服务必须写注释
service Foo {
    // FIXME 接口必须写注释
    //
    // 这里的行尾注释 sniper:foo 有特殊含义，是可选的
    // 框架会将此处冒号后面的值(foo)注入到 ctx 中，
    // 用户可以使用 twirp.MethodOption(ctx) 查询，并执行不同的逻辑
    // 这个 sniper 前缀可以通过 --twirp_out=option_prefix=sniper:. 自定义
    rpc Echo(EchoReq) returns (EchoResp); // sniper:foo
    rpc Insert(InsertReq) returns (InsertResp);
}

message EchoReq {
    // FIXME 请求字段必须写注释
    string msg = 1;
    string query = 2;
}

message EchoResp {
    // FIXME 响应字段必须写注释
    string msg = 1;
    repeated Product products = 2;
}

message InsertReq {
    // FIXME 请求字段必须写注释
    string msg = 1;
    Product product = 2;
}

message InsertResp {
    // FIXME 响应字段必须写注释
    string msg = 1;
    string insertRowID = 2;
}

message Product {
    string productCode = 1;
    string productName = 2;
    string productLine = 3;
    string productScale = 4;
    string productVendor = 5;
    string productDescription = 6;
    int32 quantityInStock = 7;
    string buyPrice = 8;
    string MSRP = 9;
}
